fixed a bug in which the create grid menu is visible for a moment when the page is loading

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 
 #newGridSettings{
     display: flex;
+    visibility: collapse;
     flex-direction: column;
     justify-content: center;
     align-items: center;
